--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
-						<section>
+						<!-- <section>
 							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
@@ -55,7 +55,7 @@
 									</ul>
 								</div>
 							</div>
-						</section>
+						</section> -->
 						<section>
 							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
@@ -68,18 +68,18 @@
 								</div>
 							</div>
 						</section>
-						<!-- <section>
+						<section>
 							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Ultricies aliquam</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<h2>My Store</h2>
+									<p>Checkout products promoted on my social media</p>
 									<ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
-						</section> -->
+						</section>
 					</section>
 
 				<!-- Two -->
