--- a/index.html
+++ b/index.html
@@ -1,12 +1,8 @@
 <!DOCTYPE HTML>
-<!--
-	Hyperspace by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
-		<title>Hyperspace by HTML5 UP</title>
+		<title>Mishika Khanna</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -44,18 +40,18 @@
 
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
-						<!-- <section>
+						<section>
 							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Exclusive</h2>
-									<p>Access to my exclusive content</p>
+									<h2>Modelling</h2>
+									<p>Modelling for clothing brands</p>
 									<ul class="actions">
-										<li><a href="exclusive.html" class="button">Learn more</a></li>
+										<li><a href="collaborations.html" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
-						</section> -->
+						</section>
 						<section>
 							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
