--- a/collaborations.html
+++ b/collaborations.html
@@ -6,9 +6,11 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css" rel="stylesheet">
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"></script>
 
 		<!-- Sidebar -->
 			<section id="sidebar">
@@ -23,5 +25,28 @@
 					</nav>
 				</div>
 			</section>
+
+			<section id="image-gallery">
+				<h2>Brand Collaborations</h2>
+				<div class="gallery">
+					<div class="gallery-item">
+						<a href="https://your-s3-bucket-url.com/brand1-large.jpg" data-lightbox="collaboration-gallery">
+							<img src="https://your-s3-bucket-url.com/brand1.jpg" alt="Brand 1 Collaboration">
+						</a>
+					</div>
+					<div class="gallery-item">
+						<a href="https://your-s3-bucket-url.com/brand2-large.jpg" data-lightbox="collaboration-gallery">
+							<img src="https://your-s3-bucket-url.com/brand2.jpg" alt="Brand 2 Collaboration">
+						</a>
+					</div>
+					<div class="gallery-item">
+						<a href="https://your-s3-bucket-url.com/brand3-large.jpg" data-lightbox="collaboration-gallery">
+							<img src="https://your-s3-bucket-url.com/brand3.jpg" alt="Brand 3 Collaboration">
+						</a>
+					</div>
+					<!-- Add more images as needed -->
+				</div>
+			</section>
+			
     </body>
 </html>
