--- a/collaborations.html
+++ b/collaborations.html
@@ -29,19 +29,13 @@
 				<h2>Brand Collaborations</h2>
 				<div class="gallery">
 					<div class="gallery-item">
-						<a href="https://your-s3-bucket-url.com/brand1-large.jpg" data-lightbox="collaboration-gallery">
-							<img src="https://your-s3-bucket-url.com/brand1.jpg" alt="Brand 1 Collaboration">
-						</a>
+						<a href="#" class="image"><img src="images/pic01.jpg" alt="data-lightbox="collaboration-gallery" /></a>
 					</div>
 					<div class="gallery-item">
-						<a href="https://your-s3-bucket-url.com/brand2-large.jpg" data-lightbox="collaboration-gallery">
-							<img src="https://your-s3-bucket-url.com/brand2.jpg" alt="Brand 2 Collaboration">
-						</a>
+						<a href="#" class="image"><img src="images/pic02.jpg" alt="data-lightbox="collaboration-gallery" /></a>
 					</div>
 					<div class="gallery-item">
-						<a href="https://your-s3-bucket-url.com/brand3-large.jpg" data-lightbox="collaboration-gallery">
-							<img src="https://your-s3-bucket-url.com/brand3.jpg" alt="Brand 3 Collaboration">
-						</a>
+						<a href="#" class="image"><img src="images/pic03.jpg" alt="data-lightbox="collaboration-gallery" /></a>
 					</div>
 					<!-- Add more images as needed -->
 				</div>
