--- a/collaborations.html
+++ b/collaborations.html
@@ -29,17 +29,24 @@
 				<h2>Brand Collaborations</h2>
 				<div class="gallery">
 					<div class="gallery-item">
-						<a href="#" class="image"><img src="images/pic01.jpg" alt="data-lightbox="collaboration-gallery" /></a>
+						<a href="images/pic01.jpg" data-lightbox="collaboration-gallery">
+							<img src="images/pic01.jpg" alt="Brand Collaboration 1" />
+						</a>
 					</div>
 					<div class="gallery-item">
-						<a href="#" class="image"><img src="images/pic02.jpg" alt="data-lightbox="collaboration-gallery" /></a>
+						<a href="images/pic02.jpg" data-lightbox="collaboration-gallery">
+							<img src="images/pic02.jpg" alt="Brand Collaboration 2" />
+						</a>
 					</div>
 					<div class="gallery-item">
-						<a href="#" class="image"><img src="images/pic03.jpg" alt="data-lightbox="collaboration-gallery" /></a>
+						<a href="images/pic03.jpg" data-lightbox="collaboration-gallery">
+							<img src="images/pic03.jpg" alt="Brand Collaboration 3" />
+						</a>
 					</div>
 					<!-- Add more images as needed -->
 				</div>
 			</section>
+			
 			
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"></script>
     </body>
