--- a/collaborations.html
+++ b/collaborations.html
@@ -1,53 +1,78 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<html>
-	<head>
-		<title>Mishika Khanna</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css" rel="stylesheet">
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="is-preload">
+    <title>Multi Color HTML Template</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400">  
+    <link rel="stylesheet" href="font-awesome-4.5.0/css/font-awesome.min.css">                
+    <link rel="stylesheet" href="css/bootstrap.min.css">                                      
+    <link rel="stylesheet" href="css/hero-slider-style.css">                              
+    <link rel="stylesheet" href="css/magnific-popup.css">                                 
+    <link rel="stylesheet" href="css/tooplate-style.css">                                   
 
-		<!-- Sidebar -->
-			<section id="sidebar">
-				<div class="inner">
-					<nav>
-						<ul>
-							<li><a href="#intro">Modelling</a></li>
-							<li><a href="#one">Product Reviews</a></li>
-							<li><a href="#two">My Store</a></li>
-							<li><a href="#three">Get in touch</a></li>
-						</ul>
-					</nav>
-				</div>
-			</section>
+    <style>
+        .tm-img-gallery {
+            display: flex; /* Use flexbox for horizontal layout */
+            flex-wrap: wrap; /* Allow wrapping */
+            justify-content: center; /* Center items */
+        }
+        .grid-item {
+            margin: 10px; /* Add some space between images */
+        }
+        .grid-item img {
+            max-width: 100%; /* Ensure images are responsive */
+            height: auto; /* Maintain aspect ratio */
+        }
+    </style>
+</head>
 
-			<section id="image-gallery">
-				<h2>Brand Collaborations</h2>
-				<div class="gallery">
-					<div class="gallery-item">
-						<a href="images/pic01.jpg" data-lightbox="collaboration-gallery">
-							<img src="images/pic01.jpg" alt="Brand Collaboration 1" />
-						</a>
-					</div>
-					<div class="gallery-item">
-						<a href="images/pic02.jpg" data-lightbox="collaboration-gallery">
-							<img src="images/pic02.jpg" alt="Brand Collaboration 2" />
-						</a>
-					</div>
-					<div class="gallery-item">
-						<a href="images/pic03.jpg" data-lightbox="collaboration-gallery">
-							<img src="images/pic03.jpg" alt="Brand Collaboration 3" />
-						</a>
-					</div>
-					<!-- Add more images as needed -->
-				</div>
-			</section>
-			
-			
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"></script>
-    </body>
+<body>
+    <div class="cd-hero">
+        <ul class="cd-hero-slider">
+            <li class="selected">                    
+                <div class="cd-full-width">
+                    <div class="container-fluid js-tm-page-content" data-page-no="1" data-page-type="gallery">
+                        <div class="tm-img-gallery-container">
+                            <div class="tm-img-gallery gallery-one">
+                                <div class="tm-img-gallery-info-container">                                    
+                                    <h2 class="tm-text-title tm-gallery-title tm-white"><span class="tm-white">Multi Color Image Gallery</span></h2>
+                                    <p class="tm-text">This responsive HTML template includes three gallery pages. Multi color is designed by Tooplate.</p>
+                                </div>
+                                <div class="tm-img-gallery">
+                                    <!-- All images will be displayed here -->
+                                    <div class="grid-item">
+                                        <figure class="effect-bubba">
+                                            <img src="img/tm-img-01-tn.jpg" alt="Image One" class="img-fluid tm-img">
+                                            <figcaption>
+                                                <h2 class="tm-figure-title">Image <span>One</span></h2>
+                                                <p class="tm-figure-description">Lorem ipsum dolor sit amet.</p>
+                                                <a href="img/tm-img-01.jpg">View more</a>
+                                            </figcaption>           
+                                        </figure>
+                                    </div>
+                                    <!-- Repeat for additional images -->
+                                    <!-- Example for another image -->
+                                    <div class="grid-item">
+                                        <figure class="effect-bubba">
+                                            <img src="img/tm-img-02-tn.jpg" alt="Image Two" class="img-fluid tm-img">
+                                            <figcaption>
+                                                <h2 class="tm-figure-title">Image <span>Two</span></h2>
+                                                <p class="tm-figure-description">Maecenas purus sem.</p>
+                                                <a href="img/tm-img-02.jpg">View more</a>
+                                            </figcaption>
+                                        </figure>
+                                    </div>
+                                    <!-- Continue adding grid-item divs for each image -->
+                                </div>                                 
+                            </div>
+                        </div>                                                    
+                    </div>                    
+                </div>                    
+            </li>
+        </ul>
+    </div> 
+</body>
 </html>
