--- a/collaborations.html
+++ b/collaborations.html
@@ -7,11 +7,11 @@
 
     <title>Multi Color HTML Template</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400">  
-    <link rel="stylesheet" href="font-awesome-4.5.0/css/font-awesome.min.css">                
-    <link rel="stylesheet" href="css/bootstrap.min.css">                                      
-    <link rel="stylesheet" href="css/hero-slider-style.css">                              
-    <link rel="stylesheet" href="css/magnific-popup.css">                                 
-    <link rel="stylesheet" href="css/tooplate-style.css">                                   
+    <link rel="stylesheet" href="assets/font-awesome-4.5.0/css/font-awesome.min.css">                
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css">                                      
+    <link rel="stylesheet" href="assets/css/hero-slider-style.css">                              
+    <link rel="stylesheet" href="assets/css/magnific-popup.css">                                 
+    <link rel="stylesheet" href="assets/css/tooplate-style.css">                                   
 
     <style>
         .tm-img-gallery {
