--- a/collaborations.html
+++ b/collaborations.html
@@ -45,11 +45,11 @@
                                     <!-- All images will be displayed here -->
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/tm-img-01-tn.jpg" alt="Image One" class="img-fluid tm-img">
+                                            <img src="images/pic01.jpg" alt="Image One" class="img-fluid tm-img">
                                             <figcaption>
                                                 <h2 class="tm-figure-title">Image <span>One</span></h2>
                                                 <p class="tm-figure-description">Lorem ipsum dolor sit amet.</p>
-                                                <a href="img/tm-img-01.jpg">View more</a>
+                                                <a href="images/pic01.jpg">View more</a>
                                             </figcaption>           
                                         </figure>
                                     </div>
@@ -57,11 +57,11 @@
                                     <!-- Example for another image -->
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/tm-img-02-tn.jpg" alt="Image Two" class="img-fluid tm-img">
+                                            <img src="images/pic01.jpg" alt="Image Two" class="img-fluid tm-img">
                                             <figcaption>
                                                 <h2 class="tm-figure-title">Image <span>Two</span></h2>
                                                 <p class="tm-figure-description">Maecenas purus sem.</p>
-                                                <a href="img/tm-img-02.jpg">View more</a>
+                                                <a href="images/pic01.jpg">View more</a>
                                             </figcaption>
                                         </figure>
                                     </div>
