--- a/collaborations.html
+++ b/collaborations.html
@@ -2,100 +2,34 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <title>Multi Color HTML Template</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400">  
-    <link rel="stylesheet" href="font-awesome-4.5.0/css/font-awesome.min.css">                
-    <link rel="stylesheet" href="css/bootstrap.min.css">                                      
-    <link rel="stylesheet" href="css/hero-slider-style.css">                              
-    <link rel="stylesheet" href="css/magnific-popup.css">                                 
-    <link rel="stylesheet" href="css/tooplate-style.css">                                   
-
-    <style>
-        .tm-img-gallery {
-            display: flex; /* Use flexbox for horizontal layout */
-            flex-wrap: wrap; /* Allow wrapping */
-            justify-content: center; /* Center items */
-        }
-        .grid-item {
-            margin: 10px; /* Add some space between images */
-        }
-        .grid-item img {
-            max-width: 100%; /* Ensure images are responsive */
-            height: auto; /* Maintain aspect ratio */
-        }
-    </style>
-</head>
-
-<body>
-    <div class="cd-hero">
-        <ul class="cd-hero-slider">
-            <li class="selected">                    
-                <div class="cd-full-width">
-                    <div class="container-fluid js-tm-page-content" data-page-no="1" data-page-type="gallery">
-                        <div class="tm-img-gallery-container">
-                            <div class="tm-img-gallery gallery-one">
-                                <!-- Gallery Info -->
-                                <div class="tm-img-gallery-info-container">                                    
-                                    <h2 class="tm-text-title tm-gallery-title tm-white"><span class="tm-white">Multi Color Image Gallery</span></h2>
-                                    <p class="tm-text">This responsive HTML template includes three gallery pages. Multi color is designed by Tooplate.</p>
-                                </div>
-
-                                <!-- Image Grid -->
-                                <div class="tm-img-gallery">
-                                    <!-- Example Image Item -->
-                                    <div class="grid-item">
-                                        <figure class="effect-bubba">
-                                            <img src="img/tm-img-01-tn.jpg" alt="Image One" class="img-fluid tm-img">
-                                            <figcaption>
-                                                <h2 class="tm-figure-title">Image <span>One</span></h2>
-                                                <p class="tm-figure-description">Lorem ipsum dolor sit amet.</p>
-                                                <a href="img/tm-img-01.jpg" class="popup-link">View more</a> <!-- Popup link -->
-                                            </figcaption>           
-                                        </figure>
-                                    </div>
-
-                                    <!-- Repeat for additional images -->
-                                    <!-- Example for another image -->
-                                    <div class="grid-item">
-                                        <figure class="effect-bubba">
-                                            <img src="img/tm-img-02-tn.jpg" alt="Image Two" class="img-fluid tm-img">
-                                            <figcaption>
-                                                <h2 class="tm-figure-title">Image <span>Two</span></h2>
-                                                <p class="tm-figure-description">Maecenas purus sem.</p>
-                                                <a href="img/tm-img-02.jpg" class="popup-link">View more</a> <!-- Popup link -->
-                                            </figcaption>
-                                        </figure>
-                                    </div>
-
-                                    <!-- Continue adding grid-item divs for each image -->
-                                </div>                                 
-                            </div>
-                        </div>                                                    
-                    </div>                    
-                </div>                    
-            </li>
-        </ul>
-    </div>
-
-    <!-- Include jQuery and Magnific Popup JS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
-    <script src="assets/js/jquery.magnific-popup.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
+</head>
+<body>
 
-    <!-- Initialize Magnific Popup -->
-    <script>
-    $(document).ready(function() {
-        $('.popup-link').magnificPopup({
-            type: 'image',
-            gallery: {
-                enabled: true // Enable gallery navigation
-            }
-        });
+<div class="grid-item">
+    <figure class="effect-bubba">
+        <img src="img/tm-img-01-tn.jpg" alt="Image One" class="img-fluid tm-img">
+        <figcaption>
+            <h2 class="tm-figure-title">Image <span>One</span></h2>
+            <p class="tm-figure-description">Lorem ipsum dolor sit amet.</p>
+            <a href="img/tm-img-01.jpg" class="popup-link">View more</a> <!-- Popup link -->
+        </figcaption>           
+    </figure>
+</div>
+
+<script>
+$(document).ready(function() {
+    $('.popup-link').magnificPopup({
+        type: 'image',
+        gallery: {
+            enabled: true // Enable gallery navigation
+        }
     });
-    </script>
+});
+</script>
 
 </body>
 </html>
