--- a/collaborations.html
+++ b/collaborations.html
@@ -2,24 +2,32 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css">
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
+
+    <title>Multi Color HTML Template</title>
+    
+    <!-- Load stylesheets -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400">  
+    <link rel="stylesheet" href="font-awesome-4.5.0/css/font-awesome.min.css">                
+    <link rel="stylesheet" href="css/bootstrap.min.css">                                      
+    <link rel="stylesheet" href="css/hero-slider-style.css">                              
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css">                                 
+    <link rel="stylesheet" href="css/tooplate-style.css">                                   
+
 </head>
+
 <body>
 
-<div class="grid-item">
-    <figure class="effect-bubba">
-        <img src="img/tm-img-01-tn.jpg" alt="Image One" class="img-fluid tm-img">
-        <figcaption>
-            <h2 class="tm-figure-title">Image <span>One</span></h2>
-            <p class="tm-figure-description">Lorem ipsum dolor sit amet.</p>
-            <a href="img/tm-img-01.jpg" class="popup-link">View more</a> <!-- Popup link -->
-        </figcaption>           
-    </figure>
+<div class="cd-hero">
+    <!-- Your content here -->
 </div>
 
+<!-- Include jQuery and Magnific Popup JS -->
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
+
+<!-- Initialize Magnific Popup -->
 <script>
 $(document).ready(function() {
     $('.popup-link').magnificPopup({
