--- a/collaborations.html
+++ b/collaborations.html
@@ -54,17 +54,17 @@
         <h2>Brand Collaborations</h2>
         <div class="horizontal-gallery">
             <div class="gallery-item">
-                <a href="images/pic01.jpg" data-lightbox="collaboration-gallery">
+                <a href="images/pic01.jpg" data-lightbox="collaboration-gallery" data-title="Brand Collaboration 1">
                     <img src="images/pic01.jpg" alt="Brand Collaboration 1" />
                 </a>
             </div>
             <div class="gallery-item">
-                <a href="images/pic02.jpg" data-lightbox="collaboration-gallery">
+                <a href="images/pic02.jpg" data-lightbox="collaboration-gallery" data-title="Brand Collaboration 2">
                     <img src="images/pic02.jpg" alt="Brand Collaboration 2" />
                 </a>
             </div>
             <div class="gallery-item">
-                <a href="images/pic03.jpg" data-lightbox="collaboration-gallery">
+                <a href="images/pic03.jpg" data-lightbox="collaboration-gallery" data-title="Brand Collaboration 3">
                     <img src="images/pic03.jpg" alt="Brand Collaboration 3" />
                 </a>
             </div>
