--- a/collaborations.html
+++ b/collaborations.html
@@ -76,13 +76,14 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
     <script>
         $(document).ready(function() {
-            $('.gallery-item a').magnificPopup({
-                type: 'image',
-                gallery: {
-                    enabled: true // Enable gallery navigation
-                }
-            });
-        });
+    		$('.gallery-item a').magnificPopup({
+        		type: 'image',
+        		gallery: {
+            		enabled: true // Enable gallery navigation
+        		},
+        		titleSrc: null // Disable title display
+    		});
+		});
     </script>
 </body>
 </html>
